<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/login_padding"
    >
  <TextView
      android:id="@+id/logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginEnd="@dimen/logo_margin_side"
      android:layout_marginStart="@dimen/logo_margin_side"
      android:layout_marginTop="@dimen/logo_margin_top"
      android:gravity="center_horizontal"
      android:text="@string/curriculum_vitae"
      android:textColor="@color/colorPrimary"
      android:textSize="@dimen/splashscreen_textsize"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />


  <TextView
      android:id="@+id/login_error"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/password"
      android:layout_marginStart="@dimen/error_margin"
      android:layout_marginTop="@dimen/error_margin"
      android:padding="@dimen/error_padding"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="@dimen/error_textsize"
      android:visibility="invisible"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password"
      />

  <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/logo"
      android:layout_centerHorizontal="true"
      android:layout_marginEnd="@dimen/input_margin"
      android:layout_marginStart="@dimen/input_margin"
      android:layout_marginTop="@dimen/email_margin_top"
      android:hint="@string/e_mail"
      android:inputType="textEmailAddress"
      android:maxLines="1"
      android:padding="@dimen/input_padding"
      android:shadowColor="@color/colorPrimaryLight"
      android:singleLine="true"
      android:textColor="@color/black"
      android:textColorHighlight="@color/colorPrimaryLight"
      android:textColorLink="@color/colorPrimaryLight"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/logo"
      />

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/email"
      android:layout_centerHorizontal="true"
      android:layout_marginEnd="@dimen/input_margin"
      android:layout_marginStart="@dimen/input_margin"
      android:layout_marginTop="@dimen/password_margin_top"
      android:hint="@string/password_hint"
      android:inputType="textPassword"
      android:maxLines="1"
      android:padding="@dimen/input_padding"
      android:shadowColor="@color/colorPrimaryLight"
      android:singleLine="true"
      android:textColor="@color/black"
      android:textColorHighlight="@color/colorPrimaryLight"
      android:textColorLink="@color/colorPrimaryLight"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email"
      />

  <Button
      android:id="@+id/anonymous_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/login_error"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="@dimen/button_margin_bottom"
      android:layout_marginEnd="@dimen/button_margin_side"
      android:layout_marginStart="@dimen/button_margin_side"
      android:background="@color/colorPrimary"
      android:paddingBottom="@dimen/button_padding"
      android:paddingTop="@dimen/button_padding"
      android:text="@string/no_logging"
      android:textColor="@color/white"
      android:textSize="@dimen/button_text_size"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />

  <Button
      android:id="@+id/login_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/login_error"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="@dimen/button_margin_side"
      android:layout_marginStart="@dimen/button_margin_side"
      android:layout_marginTop="@dimen/button_margin_top"
      android:background="@color/colorPrimary"
      android:paddingBottom="@dimen/button_padding"
      android:paddingTop="@dimen/button_padding"
      android:text="@string/Log_in"
      android:textColor="@color/white"
      android:textSize="@dimen/button_text_size"
      app:layout_constraintBottom_toTopOf="@+id/anonymous_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />

  <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/login_button"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="@dimen/progress_bar_margin"
      android:layout_marginEnd="@dimen/progress_bar_margin"
      android:layout_marginStart="@dimen/progress_bar_margin"
      android:layout_marginTop="@dimen/progress_bar_margin"
      android:visibility="invisible"
      app:layout_constraintBottom_toTopOf="@+id/login_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password"
      style="?android:attr/progressBarStyle"
      />


</android.support.constraint.ConstraintLayout>
